<resources>
    <string name="app_name">Chat Application</string>
    <string name="this_is_received_message">This is Received message</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="yogesh">Yogesh</string>
    <string name="text_here">Text here</string>
    <string name="send">SEND</string>
    <string name="app_logo">APP LOGO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
</resources>