<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailBox"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordBox"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/log_in"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"/>


</androidx.constraintlayout.widget.ConstraintLayout>